# goose-mentor-mode

./: ACTION_PLAN.md  ARCHITECTURE_ANALYSIS.md  CONTRIBUTING.md  GOOSE_ARCHITECTURE_INVESTIGATION.md  GOOSE_DESKTOP_CONFIG.md  INTEGRATION_GUIDE.md  README.md  USAGE_EXAMPLES.md  pyproject.toml  requirements-dev.txt  simple_mentor_test.py  test_goose_integration.py
docs/: architecture.md  implementation-plan.md  interaction-patterns.md  learning-metrics.md
examples/: demo.py
examples/learning_scenarios/: jwt_authentication.md
goose_extension_test/: extension.py
mcp-mentor/: README.md  goose-config-examples.md  pyproject.toml
mcp-mentor/src/mentor_mcp/: __init__.py  server.py
mcp-mentor/tests/: test_mcp_server.py
src/goose_mentor_mode/: __init__.py  mentor_engine.py  server.py
src/mentor_mcp/: __init__.py  server.py
src/mentor_mode/: __init__.py
src/mentor_mode/core/: mentor_engine.py
src/mentor_mode/goose_extension/: __init__.py  mentor_extension.py
tests/: test_mentor_extension.py
